--- a/src/main/resources/templates/market.html
+++ b/src/main/resources/templates/market.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
+<html lang="en" 
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8">
     <title>AgroLive</title>
@@ -95,22 +95,41 @@
                     <span class="fa fa-bars text-primary"></span>
                 </button>
                 <div class="collapse navbar-collapse bg-white" id="navbarCollapse">
-                   <div class="navbar-nav mx-auto">
+                  <div class="navbar-nav mx-auto">
                         <a th:href="@{/}" class="nav-item nav-link">Home</a>
                         <a href="#" class="nav-item nav-link">About</a>
                         <a th:href="@{/market}" class="nav-item nav-link active">Market</a>
-                        <a th:href="@{/login}" class="nav-item nav-link">Login</a>
                         <a th:href="@{/contact}" class="nav-item nav-link">Contact</a>
-                   </div>
+                        
+                        <!-- Show Login only when NOT authenticated -->
+                        <a th:href="@{/login}" class="nav-item nav-link" 
+                        sec:authorize="!isAuthenticated()">Login</a>
+                        
+                        <!-- Show Logout only when authenticated -->
+                        <a th:href="@{/logout}" class="nav-item nav-link" 
+                        sec:authorize="isAuthenticated()">Logout</a>
+                    </div>
+
+                    <div class="d-flex m-3 me-0">
+                        <!-- Optional: Show username -->
+                        <!-- <span class="my-auto me-3 text-primary" 
+                            sec:authorize="isAuthenticated()">
+                            Hi, <span sec:authentication="name"></span>
+                        </span>
+                        -->
+                        <a th:href="@{/register}" class="my-auto">
+                            <i class="fas fa-user fa-2x"></i>
+                        </a>
+                    </div>
                     <div class="d-flex m-3 me-0">
                         <!-- <a href="#" class="position-relative me-4 my-auto">
                             <i class="fa fa-shopping-bag fa-2x"></i>
                             <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1"
                                 style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
                         </a> -->
-                        <a href="#" class="my-auto">
+                        <!-- <a href="#" class="my-auto">
                             <i class="fas fa-user fa-2x"></i>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </nav>
