--- a/src/main/resources/templates/allCommodities.html
+++ b/src/main/resources/templates/allCommodities.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Fruitables - Vegetable Website Template</title>
+    <title>Agrolive - Smart Agricultural Price Tracking Platform</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <!-- Google Web Fonts -->
